--- a/views/assessment.ejs
+++ b/views/assessment.ejs
@@ -19,7 +19,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item ">
-						<a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 						<a class="nav-link" href="/course/<%= courseName %>">Lessons <span class="sr-only">(current)</span></a>
@@ -28,7 +28,7 @@
 						<a class="nav-link" href="#">Assessments <span class="sr-only">(current)</span></a>
 				</li>
                 <li class="nav-item ">
-                        <a class="nav-link" href="/course/<%= courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/course/<%= courseName %>/gradebook">Gradebook<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
 			<ul class="nav navbar-nav navbar-right">
@@ -50,15 +50,18 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Maximum Marks</th>
+                <th></th>
             </tr>
             <% for(var i=0; i<availibleAssessments.length;i++){ %>
                 <tr>
                     <td><%= availibleAssessments[i].ASSESSMENT_NAME %></td>
                     <td><%= availibleAssessments[i].ASSESSMENT_DESCRIPTION %></td>
                     <td><%= availibleAssessments[i].ASSESSMENT_MAX_MARK %></td>
+                    <td><button class="btn btn-primary-outline" data-toggle="modal" data-target="#editAssessment" >Update Student Marks</button></td>
                 </tr> 
             <%} %>
             <tr>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td><button class="btn btn-primary" data-toggle="modal" data-target="#createAssessment" >Create Assessment</button></td>
@@ -106,5 +109,51 @@
                 </div>
             </div>
         </div>
+        
+    <!-- Edit Lesson Modal -->
+    <div class="modal fade" id="editAssessment" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Edit Lesson</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <form action="/course/<%= courseName %>/editLesson" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label>Number</label><br>
+                        <input type="text" class="form-control" name="lessonNumber">
+                    </div>
+                    <div class="form-group">
+                        <label>Name</label><br>
+                        <input type="text" class="form-control" name="LESSON_NAME">
+                    </div>
+                    <div class="form-group">
+                        <label>Description</label><br>
+                        <textarea  name="LESSON_DESCRIPTION" class="w-100"> </textarea>
+                    </div>
+                    <div class="form-group">
+                        <label>Material</label><br>
+                        <div class="input-group mb-3">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="inputGroupFile03">
+                                <label class="custom-file-label text-dark" for="inputGroupFile03">Choose file</label>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-warning btn-lg w-100">Create</button>
+                </form>
+                
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
