--- a/views/courseView.ejs
+++ b/views/courseView.ejs
@@ -19,10 +19,19 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-						<a class="nav-link" href="profile">Profile <span class="sr-only">(current)</span></a>
+				<li class="nav-item">
+						<a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
 				</li>
-			</ul>
+				<li class="nav-item active">
+						<a class="nav-link" href="/course/<%= course[0].courseName %>">Lessons <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+						<a class="nav-link" href="/course/<%= course[0].courseName %>/assessment">Assessments <span class="sr-only">(current)</span></a>
+				</li>
+                <li class="nav-item">
+                        <a class="nav-link" href="/course/<%= course[0].courseName %>/gradebook">Gradebook<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/logout"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
 			</ul>
@@ -35,19 +44,118 @@
     </div>
 
     <!-- table -->
-    <table class="table">
-        <tr>
-            <th>Lesson</th>
-            <th>Description</th>
-        </tr>
-        <% for(var i=0; i<course.length;i++){ %>
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <td><%= course[i].LESSON_NAME %></td>
-                <td><%= course[i].LESSON_DESCRIPTION %></td>
-                <td><%= course[i].LESSON_MATERIAL %></td>
+                <th>#</th>
+                <th>Lesson</th>
+                <th>Description</th>
+                <th>Material</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% for(var i=0; i<course.length;i++){ %>
+                <tr>
+                    <td><%= course[i].lessonNumber %></td>
+                    <td><button class="btn btn-primary-outline" data-toggle="modal" data-target="#editLesson"><span class="fas fa-edit text-left"></span>  <%= course[i].LESSON_NAME %></td></button>                                
+                    <td><%= course[i].LESSON_DESCRIPTION %></td>
+                    <td><%= course[i].LESSON_MATERIAL %></td>
+                </tr> 
+            <%} %>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr> 
-        <%} %>
+        </tbody>
     </table>
 
+    <!-- Create Lesson Modal
+    <div class="modal fade" id="createLesson" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Create Lesson</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                    <form action="/course/<%= course[0].courseName %>/addLesson" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label>Number</label><br>
+                            <input type="text" class="form-control" name="lessonNumber">
+                        </div>
+                        <div class="form-group">
+                            <label>Name</label><br>
+                            <input type="text" class="form-control" name="LESSON_NAME">
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label><br>
+                            <textarea  name="LESSON_DESCRIPTION" class="w-100"> </textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Material</label><br>
+                            <input type="file" name="filetoupload"><br>
+                        </div>
+                        <button type="submit" class="btn btn-warning btn-lg w-100">Create</button>
+                    </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+    </div> -->
+
+    
+    <!-- Edit Lesson Modal
+    <div class="modal fade" id="editLesson" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Lesson</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+
+                    <form action="/course/<%= course[0].courseName %>/editLesson" method="post" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label>Number</label><br>
+                            <input type="text" class="form-control" name="lessonNumber">
+                        </div>
+                        <div class="form-group">
+                            <label>Name</label><br>
+                            <input type="text" class="form-control" name="LESSON_NAME">
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label><br>
+                            <textarea  name="LESSON_DESCRIPTION" class="w-100"> </textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Material</label><br>
+                            <div class="input-group mb-3">
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" id="inputGroupFile03">
+                                    <label class="custom-file-label text-dark" for="inputGroupFile03">Choose file</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-warning btn-lg w-100">Create</button>
+                    </form>
+                    
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+                </div>
+            </div>
+        </div> -->
 </body>
 </html>
