--- a/views/courseView.ejs
+++ b/views/courseView.ejs
@@ -62,6 +62,7 @@
                     <td><button class="btn btn-primary-outline" data-toggle="modal" data-target="#editLesson"><span class="fas fa-edit text-left"></span>  <%= course[i].LESSON_NAME %></td></button>                                
                     <td><%= course[i].LESSON_DESCRIPTION %></td>
                     <td><%= course[i].LESSON_MATERIAL %></td>
+                    <td><a href="/course/<%= course[0].courseName %>/downloadlesson/<%= course[i].lessonNumber %>">Download</a></td>
                 </tr> 
             <%} %>
             <tr>
